@@ -14,7 +14,6 @@ lib/MetaTrans/SeznamCz.pm
 lib/MetaTrans/SlovnikCz.pm
 lib/MetaTrans/SlovnikZcuCz.pm
 lib/MetaTrans/SmsCz.pm
-lib/MetaTrans/UltralinguaNet.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
@@ -43,10 +42,6 @@ t/MetaTrans-SmsCz/00-use.t
 t/MetaTrans-SmsCz/01-version.t
 t/MetaTrans-SmsCz/02-pod_coverage.t
 t/MetaTrans-SmsCz/03-pod.t
-t/MetaTrans-UltralinguaNet/00-use.t
-t/MetaTrans-UltralinguaNet/01-version.t
-t/MetaTrans-UltralinguaNet/02-pod_coverage.t
-t/MetaTrans-UltralinguaNet/03-pod.t
 t/MetaTrans/00-use.t
 t/MetaTrans/01-version.t
 t/MetaTrans/02-pod_coverage.t
